--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading_friends_list">Loading friends list</string>
+    <string name="friends_list">Friends List</string>
+    <string name="account">Account</string>
+    <string name="wishlists">WishLists</string>
+    <string name="calendar">Calendar</string>
+    <string name="cart">Cart</string>
 </resources>
