--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="gift_photo">Gift photo</string>
     <string name="my_wishlists">My WishLists :</string>
     <string name="wishlists_points">Wishlists :</string>
+    <string name="user">User</string>
+    <string name="filter">Filter</string>
+    <string name="edit">Edit</string>
+    <string name="delete_all">Delete All</string>
+    <string name="add">Add</string>
 </resources>
