--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="edit">Edit</string>
     <string name="delete_all">Delete All</string>
     <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
 </resources>
