--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,10 @@
     <string name="delete_all">Delete All</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+    <string name="wishlist">Wishlist</string>
+    <string name="gift">Gift</string>
+    <string name="name">Name</string>
+    <string name="image_link">Image Link</string>
+    <string name="description">Description</string>
+    <string name="enter_wishlist_s_name">Enter Wishlist\'s name</string>
 </resources>
