--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="logout">Logout</string>
     <string name="log_in_using_vk">Log in using Vk</string>
     <string name="friend_wishlist">%1$s\'s %2$s Wishlist</string>
+    <string name="search">Search</string>
 </resources>
