add fav friends filter and adding/deleting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="log_in_using_vk">Log in using Vk</string>
     <string name="friend_wishlist">%1$s\'s %2$s Wishlist</string>
     <string name="search">Search</string>
+    <string name="add_delete_from_fav">Add/Delete from fav</string>
 </resources>
