--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">GiftGiver</string>
     <string name="user_photo">User Photo</string>
     <integer name="com_vk_sdk_AppId">8087245</integer>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading_friends_list">Loading friends list</string>
     <string name="friends_list">Friends List</string>
@@ -31,4 +30,6 @@
     <string name="friend_wishlist">%1$s\'s %2$s Wishlist</string>
     <string name="search">Search</string>
     <string name="add_delete_from_fav">Add/Delete from fav</string>
+    <string name="change_image">Change image</string>
+    <string name="goback">GoBack</string>
 </resources>
