--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="add_delete_from_fav">Add/Delete from fav</string>
     <string name="change_image">Change image</string>
     <string name="goback">GoBack</string>
+    <string name="save">Save</string>
 </resources>
