logout dialog added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="no_wishlists_here_yet">No wishlists here yet</string>
     <string name="wishlist_is_empty_now">Wishlist is empty now</string>
     <string name="auth_error">Authentication error</string>
+    <string name="dialog_logout">Are you sure you wanna logout?</string>
 </resources>
