account page appereance changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="wishlist_is_empty_now">Wishlist is empty now</string>
     <string name="auth_error">Authentication error</string>
     <string name="dialog_logout">Are you sure you wanna logout?</string>
+    <string name="edit_account">Edit account</string>
 </resources>
